# flurries

./: Cargo.toml  LICENSE  README.md
src/: fetchers.rs  lib.rs  main.rs
src/configuration/: environment.rs
src/fetchers/: api.rs  open_weather_map_service.rs
