[package]
name = "flurries"
version = "0.1.0"
edition = "2021"
description = "Retrieves weather information based on a given location"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
colored = { version = "2.0.4" }
clap = { version = "4.3.11", features = ["derive"] }
